--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/dialog-env-solicitud-autoriz/dialog-env-solicitud-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/dialog-env-solicitud-autoriz/dialog-env-solicitud-autoriz.component.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="col d-flex">
                             <mat-form-field class="full-width">
-                                <input matInput #urlSoporte type="text" formControlName="urlSoporte" required>
+                                <input matInput #urlSoporte type="text" maxlength="400" formControlName="urlSoporte" required>
                             </mat-form-field>
                         </div>
                         <span class="icon-incompleto">
