--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-validar-requisitos-pago/registrar-validar-requisitos-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-validar-requisitos-pago/registrar-validar-requisitos-pago.component.html
@@ -86,57 +86,95 @@
                     <ng-container *ngIf="element.tipoSolicitudCodigo !== tipoSolicitud.expensas; else esExpensas">
                         <!--
                             ng-container para obra, interventoria, otros costos
-                            etiqueta "Section" condicionada para el estadoCodigo enProcesoRegistro === '1'
                         -->
-                        <section *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoRegistro || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaEquipoFacturacion">
-                            <button mat-raised-button color="accent" class="btn-table" (click)="devolverSolicitudDialog( element )" *ngIf="element.registroCompleto === false">
-                                Devolver solicitud
-                            </button>
-                            <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleEditar', element.contratoId, element.solicitudPagoId ]" *ngIf="element.registroCompleto === false"> 
-                                Ver detalle/Editar
-                            </button>
-                            <button mat-raised-button color="accent" class="btn-table" (click)="deleteSolicitudPago( element.solicitudPagoId )" *ngIf="element.registroCompleto === false">
-                                Eliminar
-                            </button>
-                            <button mat-raised-button color="accent" class="btn-table" (click)="changueStatusSolicitudPago( element.solicitudPagoId )" *ngIf="element.registroCompleto === true">
-                                Enviar para verificación
-                            </button>
-                        </section>
                         <!--
-                            etiqueta "Section" condicionada para el estadoCodigo solicitudRevisadaEquipoFacturacion === '2'
+                            - Cuando esta incompleto muestra solo ver detale/ editar y eliminar
+                            - Cuando un registro de la lista de chequeo este en "No cumple" muestra los botones devolver solicitud, ver detalle / editar, eliminar y la solicitud en registro completo
+                            - Cuando el registro esta completo y los registros de la lista de chequeo estan en cumple o no aplica se muestran los botones ver detalle / editar, eliminar y enviar a verificacion
                         -->
-                        <section *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.solicitudRevisadaEquipoFacturacion">
-                            <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalle', element.contratoId, element.solicitudPagoId ]"> 
-                                Ver detalle
-                            </button>
+                        <section [ngSwitch]="element.estadoCodigo">
+
+                            <div *ngSwitchCase="listaEstadoSolicitudPago.enProcesoRegistro">
+                                <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleEditar', element.contratoId, element.solicitudPagoId ]"> 
+                                    Ver detalle/Editar
+                                </button>
+                                <button mat-raised-button color="accent" class="btn-table" (click)="deleteSolicitudPago( element.solicitudPagoId )" *ngIf="element.registroCompleto === false">
+                                    Eliminar
+                                </button>
+                            </div>
+
+                            <div *ngSwitchCase="listaEstadoSolicitudPago.solicitudRevisadaEquipoFacturacion">
+                                <button mat-raised-button color="accent" class="btn-table" (click)="changueStatusSolicitudPago( element.solicitudPagoId )" *ngIf="element.tieneNoCumpleListaChequeo === false">
+                                    Enviar para verificación
+                                </button>
+                                <button mat-raised-button color="accent" class="btn-table" (click)="devolverSolicitudDialog( element )" *ngIf="element.tieneNoCumpleListaChequeo === true">
+                                    Devolver solicitud
+                                </button>
+                                <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleEditar', element.contratoId, element.solicitudPagoId ]"> 
+                                    Ver detalle/Editar
+                                </button>
+                                <button mat-raised-button color="accent" class="btn-table" (click)="deleteSolicitudPago( element.solicitudPagoId )" *ngIf="element.registroCompleto === false">
+                                    Eliminar
+                                </button>
+                            </div>
+
+                            <div *ngSwitchCase="listaEstadoSolicitudPago.enviadaParaVerificacion">
+                                <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalle', element.contratoId, element.solicitudPagoId ]"> 
+                                    Ver detalle
+                                </button>
+                            </div>
+
                         </section>
                     </ng-container>
                     <ng-template #esExpensas>
                         <!--
                             ng-template para expensas
-                            etiqueta "Section" condicionada para el estadoCodigo enProcesoRegistro === '1'
                         -->
-                        <section *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoRegistro || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaEquipoFacturacion">
-                            <button mat-raised-button color="accent" class="btn-table" (click)="devolverSolicitudDialog( element )" *ngIf="element.registroCompleto === false">
-                                Devolver solicitud
-                            </button>
-                            <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleEditarExpensas', element.solicitudPagoId ]"> 
-                                Ver detalle/Editar
-                            </button>
-                            <button mat-raised-button color="accent" class="btn-table" (click)="deleteSolicitudPago( element.solicitudPagoId )" *ngIf="element.registroCompleto === false">
-                                Eliminar
-                            </button>
-                            <button mat-raised-button color="accent" class="btn-table" (click)="changueStatusSolicitudPago( element.solicitudPagoId )" *ngIf="element.registroCompleto === true">
-                                Enviar para verificación
-                            </button>
-                        </section>
-                        <!--
-                            etiqueta "Section" condicionada para el estadoCodigo solicitudRevisadaEquipoFacturacion === '2'
-                        -->
-                        <section *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.solicitudRevisadaEquipoFacturacion">
-                            <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]">
-                                Ver detalle
-                            </button>
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verDetalleEditarExpensas', element.solicitudPagoId ]"
+                                *ngIf=" element.estadoCodigo === listaEstadoSolicitudPago.enProcesoRegistro
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.solicitudRevisadaEquipoFacturacion"> 
+                            Ver detalle/Editar
+                        </button>
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                (click)="deleteSolicitudPago( element.solicitudPagoId )"
+                                *ngIf=" element.registroCompleto === false
+                                        && ( element.estadoCodigo === listaEstadoSolicitudPago.enProcesoRegistro || element.estadoCodigo === listaEstadoSolicitudPago.solicitudRevisadaEquipoFacturacion )">
+                            Eliminar
+                        </button>
+
+                        <section [ngSwitch]="element.estadoCodigo">
+
+                            <div *ngSwitchCase="listaEstadoSolicitudPago.enProcesoRegistro">
+                            </div>
+
+                            <div *ngSwitchCase="listaEstadoSolicitudPago.solicitudRevisadaEquipoFacturacion">
+                                <button mat-raised-button color="accent" class="btn-table" (click)="devolverSolicitudDialog( element )" *ngIf="element.registroCompleto === false">
+                                    Devolver solicitud
+                                </button>
+                                <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleEditarExpensas', element.solicitudPagoId ]"> 
+                                    Ver detalle/Editar
+                                </button>
+                                <button mat-raised-button color="accent" class="btn-table" (click)="deleteSolicitudPago( element.solicitudPagoId )" *ngIf="element.registroCompleto === false">
+                                    Eliminar
+                                </button>
+                                <button mat-raised-button color="accent" class="btn-table" (click)="changueStatusSolicitudPago( element.solicitudPagoId )" *ngIf="element.registroCompleto === true">
+                                    Enviar para verificación
+                                </button>
+                            </div>
+
+                            <div *ngSwitchCase="listaEstadoSolicitudPago.enviadaParaVerificacion">
+                                <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]">
+                                    Ver detalle
+                                </button>
+                            </div>
+
                         </section>
                     </ng-template>
                     
