--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/autorizar-solicitud-pago/autorizar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/autorizar-solicitud-pago/autorizar-solicitud-pago.component.html
@@ -49,7 +49,7 @@
                             Autorizar solicitud
                         </button>
                         <button mat-raised-button color="accent" class="btn-table">
-                            Enviar para autorizar solicitud
+                            Enviar para trámite en financiera
                         </button>
                         <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'autorizacionSolicitud', element.contratoId, element.solicitudPagoId ]">
                             Ver detalle/Editar
@@ -66,7 +66,7 @@
                             Autorizar solicitud
                         </button>
                         <button mat-raised-button color="accent" class="btn-table">
-                            Enviar para autorizar solicitud
+                            Enviar para trámite en financiera
                         </button>
                         <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'observacionExpensas', element.solicitudPagoId ]">
                             Ver detalle/Editar
