--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -68,25 +68,48 @@
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
+        
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-          [routerLink]="[ 'validarSolicitudNovedadObra', element.novedadContractualId ]">
+            [routerLink]="[ 'validarSolicitudNovedadObra', element.novedadContractualId ]"
+            *ngIf=" element.estadoCodigo === '4'">
           Validar solicitud
         </a>
+
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        (click)="this.rechazarSolicitud( element.novedadContractualId)">
+        (click)="this.rechazarSolicitud( element.novedadContractualId)"
+          *ngIf=" element.estadoCodigo === '5' && 
+                  element.registroCompletoValidacion === true && 
+                  element.tieneObservacionesSupervisor === true">
           Rechazar solicitud
         </button>
+
+        <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+        (click)="this.rechazarSolicitud( element.novedadContractualId)"
+          *ngIf=" element.estadoCodigo === '5' && 
+                  element.registroCompletoValidacion === true && 
+                  element.tieneObservacionesSupervisor === true">
+          Devolver solicitud
+        </button>
+
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-        [routerLink]="[ 'verDetalleEditarSolicitudNovedadObra', element.novedadContractualId ]">
+        [routerLink]="[ 'verDetalleEditarSolicitudNovedadObra', element.novedadContractualId ]"
+        *ngIf="element.estadoCodigo === '5'">
         Ver detalle/Editar
       </a>
+
       <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-      [routerLink]="[ 'verDetalleSolicitudNovedadObra', element.novedadContractualId ]">
+      [routerLink]="[ 'verDetalleSolicitudNovedadObra', element.novedadContractualId ]"
+      *ngIf=" element.estadoCodigo !== '4' && element.estadoCodigo !== '5'">
       Ver detalle
     </a>
-      <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button">
+
+      <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+        *ngIf=" element.estadoCodigo === '5' && 
+                element.registroCompletoValidacion === true &&
+                element.tieneObservacionesSupervisor === false">
         Tramitar solicitud
       </button>
+
       </td>
     </ng-container>
 
