--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -131,7 +131,7 @@
                             </ng-container>
                             <ng-container matColumnDef="porcentajeFacturado">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Porcentaje facturado </th>
-                                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajeFacturado }} </td>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajeFacturado.toFixed( 2 ) }}% </td>
                             </ng-container>
                             <ng-container matColumnDef="saldoPorPagar">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo por pagar </th>
@@ -139,7 +139,7 @@
                             </ng-container>
                             <ng-container matColumnDef="porcentajePorPagar">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Porcentaje por pagar </th>
-                                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajePorPagar }} </td>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajePorPagar.toFixed( 2 ) }}% </td>
                             </ng-container>
                             <tr mat-header-row *matHeaderRowDef="displayedColumnsRegistrarSolicitud"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumnsRegistrarSolicitud;"></tr>
